# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

### Changed

- O `/personalizar título` agora possui bullet points para diferenciar os títulos, facilitando na visualização mobile. - Sugerido por @mareys. 

## [5.20.2] - 2024-10-14

### Added

- **Evento de Dia dos Mortos** - Celebre o feriado mexicano até o dia 02 de novembro. A famosa flor *Cempasúchil* está disponível para ser plantada no `/fazendinha`! Compre já na loja `/loja comprar sementes`. Troque *Cempasúchil* por estrelinhas, título ou badge com `/dia dos mortos`. O valor máximo que pode se conseguir plantando *Cempasúchil* é aumentado em 0.3Kg. - Sugerido por @mareys. 

## [5.20.1] - 2024-10-06

### Fixed

- Não é mais possível trocar missões diárias já finalizadas. - Reportado por @mareys e @0_tal_do_mabs


## [5.20.0] - 2024-10-01

### Added

- Novo comando: **Pedra, Papel e Tesoura**. Jogue contra seus amigos, e se quiser aposte estrelinhas! - Sugerido por @maycon.orp
- Novo comando: **Estatísticas de Pedra Papel e Tesoura**. Veja as estatísticas de jogos de pedra, papel e tesoura de usuários com `/estatísticas pedra_papel_tesoura`.

### Changed

- O comando `/Transações` agora permite filtrar por jogos de pedra papel e tesoura. Também, não é mais possível filtrar por Transações de "o mestre mandou".

## [5.19.0] - 2024-09-29

### Added

- Criado um top de rolls no `/top diversos`. - Sugerido por @mich_solitario. 
- Trocar missões diárias! Agora é possível mudar uma de suas missões diárias. Missões trocadas não dão prêmios em estrelinhas, mas ainda dão o bônus especial. - Sugerido por @mich_solitario.
- Novo comando `/top fazendeiros`. Veja os fazendeiros que mais colheram um tipo de planta.