@@ -272,9 +272,29 @@ const updateSeason = async (nextSeason: Seasons, endsAt: number): Promise<void> 
   ]);
 };
 
+const getTopRanking = async (
+  skip: number,
+  ignoreUsers: string[] = [],
+  limit = 10,
+): Promise<Array<{ id: number; value: number }>> => {
+  const res = await farmerModel.find(
+    { ban: false, id: { $nin: ignoreUsers } },
+    ['experience', 'id'],
+    {
+      skip,
+      limit,
+      sort: { experience: -1 },
+      lean: true,
+    },
+  );
+
+  return res.map((a) => ({ id: a.id, value: a.experience ?? 0 }));
+};
+
 export default {
   getFarmer,
   executePlant,
+  getTopRanking,
   getCurrentSeason,
   upgradeSilo,
   getSeasonalInfo,
